--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -50,12 +50,8 @@ jobs:
        id: plan
        if: github.event_name == 'pull_request'
        run: terraform plan -no-color -input=false
-       continue-on-error: true
+       continue-on-error: false
     
-     - name: Terraform Plan Status
-       if: steps.plan.outcome == 'failure'
-       run: exit 1
- 
      - name: Terraform Apply
-       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+       id: apply
        run: terraform apply -auto-approve -input=false
