--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,11 +1,6 @@
-name: "Terraform Infrastructure Change Management Pipeline with GitHub Actions"
+name: "Terraform RDS"
  
 on:
- push:
-   branches:
-   - master
-   paths:
-   - terraform/**
  pull_request:
    branches:
    - master
@@ -21,7 +16,7 @@ env:
  
 jobs:
  terraform:
-   name: "Terraform Infrastructure Change Management"
+   name: "Terraform"
    runs-on: ubuntu-latest
    defaults:
      run:
@@ -30,10 +25,10 @@ jobs:
        working-directory: ./terraform
  
    steps:
-     - name: Checkout the repository to the runner
+     - name: Checkout repository 
        uses: actions/checkout@v2
  
-     - name: Setup Terraform with specified version on the runner
+     - name: Setup Terraform 
        uses: hashicorp/setup-terraform@v2
        with:
          terraform_version: 1.3.0
